# rust_text_classifier

./: .editorconfig  .gitignore  README.md  analysis  bot  classifier  pyproject.toml  sample_config.json
.github/workflows/: main.yml
corpus/game.rust/: n8rhtj  nablo0  nb51un  nck18d  ncvbfr  nd99xd  nexlvw  njldv1  nnd3d9  nnhtgx  ns98ub  ns9g8v  ns9z79  nsa1o1  nsb7gv  nsclle  nsd4k4  nsdsj9  nse6ir  nsfniz  nshkoi  nshz8m  nsi80v  nsi8y9  nsika3  nsit08  nsite8  nsizec  nsja14  nsjhyz  nsjwtt  nsk3gg  nskc7d  nskco1  nskktt  nskncg  nsl20v  nslowh  nslq8m  nslzr4  (+23 more)
corpus/lang.rust/: nry8zg  ns0jgq  ns6iko  ns88j2  nsdf4m  nsfdb6  nshcbu  nsqcjf  nsqrfl  nsrrnl  nsvyxq  nt0g5j  nt3bsn  nt475h  nt4qkm  nt5hpp  nt7twy  nt7z7e  nt8ey1  ntbeiw  ntbtt4  ntfok6  ntidy4  ntkjo6  ntr0dq  ntslql  ntu8li  nu1svw  nu23w3  nu3u6o  nu6k5y  nu6rcz  nu8qih  nu99bf  nudv4p  nuhf7r  nuq1ix  nut4ji  nuyv2z  nv2sc7  (+17 more)
lib/: __init__.py  _text_classifier.py  cli.py  config.py  datasets.py  text_classifier.py  utils.py
lib/bot/: __init__.py  db.py
lib/classifier/: __init__.py  datasets.py
posts_corpus/game.rust/: n8k0lk  nbz7db  ncyyc3  ney32d  njnqp6  nk5va4  nks7fd  nq5qir  nsa58o  nsao65  nsb50i  nsb6tn  nsb787  nscsuj  nsg35x  nshkxt  nshygt  nsi2nc  nsio41  nsj7cg  nsjbns  nsjfnd  nsjs4y  nsk14s  nsk932  nske95  nsl8hz  nsloyp  nslsyf  nslya9  nsm39c  nsmaco  nsn50n  nsndzo  nsnpb5  nsobzs  nsoq7u
posts_corpus/lang.rust/: nrz7jb  nrz8o7  ns08ep  ns1zu3  ns2d9n  ns8vi1  ns9xsr  nsa8mw  nsaovn  nsh22c  nsiqlk  nsl3hy  nsqsl6  nsvrta  nsvtk0  nsyckm  nt0p6x  nt3lzi  ntg1fe  ntj25o  ntpi1a  ntqu68  ntrlho  nttj28  nu1jc7  nu6jad  nuh5fm  num6mz  nus1yv  nuun5j  nuypmd  nv0z68  nv38in  nv3w5q  nv4ksi  nv5csu  nv6a8c  nv8668  nv9tji  nvc9ez  (+3 more)
posts_corpus/r_playrust/: ns98ub.json  ns9g8v.json  ns9z79.json  nsa1o1.json  nsa58o.json  nsao65.json  nsb50i.json  nsb6tn.json  nsclle.json  nscsuj.json  nsd4k4.json  nsdsj9.json  nse6ir.json  nsfniz.json  nsg35x.json  nshkoi.json  nshkxt.json  nshygt.json  nsi80v.json  nsio41.json  nsj7cg.json  nsjfnd.json  (+78 more)
tests/: constants.py  test_config.py  test_db.py  test_lib.py  test_post_loader.py  test_rust_text_classifier.py  test_text_classifier.py  test_utils.py  test_version_match.py
(+254 files in other folders)
