[tool.poetry]
name = "rust_text_classifier"
version = "0.1.0"
description = "[WIP] Determine if text is about the Rust game or Rust programming language"
authors = ["Lovecraftian Horror <LovecraftianHorror@pm.me>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.3"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
flaky = "^3.7.0"
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
