[tool.poetry]
name = "rust_text_classifier"
version = "0.2.1"
description = "[WIP] Determine if text is about the Rust game or Rust programming language"
authors = ["Lovecraftian Horror <LovecraftianHorror@pm.me>"]

[tool.poetry.dependencies]
# Used exclusively in `analysis`
matplotlib = "^3.4.0"
pandas = "1.2.0"
seaborn = "^0.11.0"
tqdm = "^4.61.1"

# Used for the bot
numpy = "^1.20.3"
praw = "^7.3.0"
python = "^3.8"
scikit-learn = "^0.24.2"

[tool.poetry.dev-dependencies]
# Testing
flaky = "^3.7.0"
pytest = "^5.2"
toml = "0.10.2"

# Linters and Formatting
black = "^21.6b0"
flake8 = "^3.9.2"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
ensure_newline_before_comments = true
force_grid_wrap = 0
include_trailing_comma = true
line_length = 88
multi_line_output = 3
use_parentheses = true
